2000-10-24  Alexander V. Lukyanov  <lav@yars.free.net>

	* commands.cc: set last_bg in queue.
	* lftpget: set max-redirections.

2000-10-23  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc: set event_time in Read/Write.
	* FileAccess.cc: use `now' instead of time().

2000-10-19  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc: don't call Poll on data socket (no real need).
	* FileSet.h, FileSet.cc: eliminate only_newer argument, use ignore mask.
	* MirrorJob.cc: use the new ignore mask values; don't assume only-newer
	  for reverse mirror.

2000-10-16  Alexander V. Lukyanov  <lav@yars.free.net>

	* mgetJob.cc: fix mput for directory case (continue loop instead
	  of returning).

2000-10-15  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc: use service name `ftps' for ftps; don't queue up
	  too much MDTM/SIZE commands in sync mode.

2000-10-12  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileAccess.cc, FileAccess.h: fix globbing for tilde; optimize
	  the case when pattern does not contain wildcards.
	* HttpDir.cc, FtpGlob.cc: some code moved to FileAccess.cc.
	* complete.cc: call NoInhibitTilde.

2000-10-12  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileAccess.cc, FileAccess.h, FtpSplitList.cc, FtpSplitList.h,
	  FtpGlob.cc, HttpDir.cc: Glob::add cleanup.
	* complete.cc: fix completion for filenames starting with tilde.
	* ftpclass.cc, ftpclass.h: fix for old gcc (ftps undefined).

2000-10-04  Alexander V. Lukyanov  <lav@yars.free.net>

	* Http.cc: handle CONNECT_VERIFY in CONNECTED state.
	* NetAccess.cc: Disconnect before Connect.

2000-10-03  Alexander V. Lukyanov  <lav@yars.free.net>

	* Makefile.am: use C compiler to compile modules, it should use c++
	  for c++ files automatically.
	* ResMgr.cc: use extern "C" for regex.h, this fixes linking for some
	  systems.

2000-09-29  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileCopy.cc: fix for `ls|head'.
	* ftpclass.cc, resource.cc: ftp:bind-data-socket new setting;